<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ovh.dessert.tpe.repertoiredestagesm2.MainMenuActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:id="@+id/logo"
        android:src="@drawable/logo_accueil"
        android:gravity="center" />

    <!--TextView     
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:id="@+id/logo"
        android:textSize="30sp"
        android:drawableTop="@mipmap/mainmenu_logo"
        android:textAlignment="center"
        android:gravity="center"
        /-->

    <RelativeLayout
        android:layout_below="@id/logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <LinearLayout
            android:id="@+id/buttonlayout1"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="100dp"
                android:drawableTop="@drawable/ic_list_black_72dp"
                android:textColor="@android:color/white"
                android:layout_marginRight="20dp"
                android:layout_marginEnd="20dp"
                android:background="@color/colorPrimary"
                android:paddingLeft="0dp"
                android:paddingRight="0dp"
                android:paddingStart="0dp"
                android:onClick="openList"
                android:paddingEnd="0dp"
                android:layout_gravity="bottom"
                android:text="@string/search"
                android:layout_height="100dp" />
            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="100dp"
                android:textColor="@android:color/white"
                android:drawableTop="@drawable/ic_zoom_in_black_72dp"
                android:background="@color/colorPrimary"
                android:paddingLeft="0dp"
                android:paddingRight="0dp"
                android:paddingStart="0dp"
                android:paddingEnd="0dp"
                android:onClick="openAdvSearch"
                android:layout_gravity="bottom"
                android:text="@string/advancedsearch"
                android:layout_height="100dp" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/buttonlayout2"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:layout_below="@id/buttonlayout1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="100dp"
                android:textColor="@android:color/white"
                android:layout_marginRight="20dp"
                android:layout_marginEnd="20dp"
                android:drawableTop="@drawable/ic_settings_black_72dp"
                android:background="@color/colorPrimary"
                android:paddingLeft="0dp"
                android:paddingRight="0dp"
                android:paddingStart="0dp"
                android:paddingEnd="0dp"
                android:layout_gravity="bottom"
                android:text="@string/settings"
                android:layout_height="100dp"
                android:onClick="openSettings"/>
            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="100dp"
                android:textColor="@android:color/white"
                android:drawableTop="@drawable/ic_place_black_72dp"
                android:background="@color/colorPrimary"
                android:paddingLeft="0dp"
                android:paddingRight="0dp"
                android:paddingStart="0dp"
                android:paddingEnd="0dp"
                android:layout_gravity="bottom"
                android:text="@string/map"
                android:onClick="openMap"
                android:layout_height="100dp" />
        </LinearLayout>
    </RelativeLayout>
    <TextView
        android:layout_width="match_parent"
        android:textAlignment="center"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/credit"/>
</RelativeLayout>
